# accellerator_agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  scratch_stream.py
.agents/skills/backend-makefile-api-tests/: SKILL.md
.agents/skills/docker-infra/: SKILL.md
.agents/skills/langgraph-sdk-integration/: SKILL.md  examples.md
.agents/skills/python-api-architecture/: SKILL.md  backend-api-style-guide.md  checklist.md  examples.md
accelerator_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: auth.py
src/api/: client.py  documents.py  errors.py
src/core/: config.py
src/graph/: graph.py  interrupts.py  nodes.py  progress.py  state.py
src/presentation/: models.py  prompts.py  service.py
src/requirements_flow/: models.py  prompts.py  service.py
src/team/: directory.py  models.py  prompts.py  service.py
src/techspec/: card.py  models.py  prompts.py  render.py  service.py
src/utils/: llm_gen.py
tests/: conftest.py  test_attach_patch.py  test_auth.py  test_client.py  test_documents_pick.py  test_llm_stream.py  test_progress.py  test_routers.py  test_spec_models.py  test_summary.py
