[project]
name = "accelerator_agent"
version = "0.1.0"
description = "ИИ-ассистент заказчика: ТЗ, подбор команды, презентация проекта (LangGraph)."
authors = [{ name = "Andrew" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.0.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.10",
    "python-pptx>=1.0.2",
    "pypandoc-binary>=1.17",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "core",
    "utils",
    "api",
    "requirements_flow",
    "techspec",
    "team",
    "presentation",
    "graph",
]
[tool.setuptools.package-dir]
"core" = "src/core"
"utils" = "src/utils"
"api" = "src/api"
"requirements_flow" = "src/requirements_flow"
"techspec" = "src/techspec"
"team" = "src/team"
"presentation" = "src/presentation"
"graph" = "src/graph"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
lint.select = ["E", "F", "I", "D", "D401", "T201", "UP"]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.14",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "ruff>=0.8.2",
]